# ABD-NSTU

./: README.md  aaa
coursera/red_belt/libraries/src/: SimpleVector.cpp  SimpleVector.h  a.out  main.cpp
digital_signature/: CMakeLists.txt  Digital_Signature.hpp  file.txt  main.cpp
libraries/SimpleVector/: README
libraries/SimpleVector/src/: SimpleVector.hpp
libraries/Sockets/: CMakeLists.txt  README
libraries/Sockets/src/: SimpleServer.cpp  SimpleServer.hpp  Sockets.cpp  Sockets.hpp
libraries/matrix/: CMakeLists.txt  README
libraries/matrix/lib/: CMakeLists.txt  matrix.cpp
libraries/matrix/src/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  README
server/src/: .client.cpp.swp  client.cpp  man.txt  server.cpp
